Fixing firefox issue with text overflow on buttons

--- a/greasemonkey/trello-swimlane-navigation/trello-swimlane-navigation.css
+++ b/greasemonkey/trello-swimlane-navigation/trello-swimlane-navigation.css
@@ -43,9 +43,14 @@
 	box-shadow: none;
 	line-height: 30px;
 	position: relative;
+}
+
+.lane-menu button span {
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
+	width: 100%;
+	display: block;
 }
 
 .lane-menu button img,
